--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -64,7 +64,7 @@
             \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
             \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
             \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の最悪応答時間の合計で制限する
-            \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
+            \item その後, [54, 56] のように, 分析精度を向上させる拡張機能が設計された
         \end{itemize}
     \end{frame}
 
