--- a/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
+++ b/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
@@ -31,8 +31,8 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item その結果, ROS2エグゼキュータのスケジューリング動作は, これまでのリアルタイムスケジューリング研究で研究されてきたものとは大きく異なり, 新たな解析技術が必要であることが判明しました.
-        \item 6]のハイレベルなビジョンと具体的な成果は, ROSコミュニティ[8], [9]に直ちに影響を与え, ROS2の解析的ハードリアルタイム保証をサポートするために, リアルタイムスケジューリングとROSコミュニティ間の緊密な相互作用を引き起こす可能性があります.
+        \item その結果, ROS2エグゼキュータのスケジューリング動作は, これまでのリアルタイムスケジューリング研究で研究されてきたものとは大きく異なり, 新たな分析技術が必要であることが判明しました.
+        \item 6]のハイレベルなビジョンと具体的な成果は, ROSコミュニティ[8], [9]に直ちに影響を与え, ROS2の分析的ハードリアルタイム保証をサポートするために, リアルタイムスケジューリングとROSコミュニティ間の緊密な相互作用を引き起こす可能性があります.
     \end{itemize}
 \end{frame}
 
