--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/automatic_latency_management.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/automatic_latency_management.tex
@@ -57,7 +57,7 @@
         \item 特に, デフォルトスケジューラであるCFS のベースラインは, 全く設定する必要がない
         \item システムインテグレータは, 通常, ロボットやミッション固有のエンドツーエンドレイテンシ要件に関するハイレベルな理解を持っているが, 低レベルのシステム内部を知ることは合理的に期待されるものではない
               \forme{\item 様々なROSコンポーネントがどのように正確に相互作用し, どの程度の頻度で相互作用し, 何個のエグゼキュータがあり, ROSエグゼキュータでコールバックがスケジュールされ, Linuxのリアルタイムスケジュール機能がどのように動作するのか}
-        \item 採用の障壁を最小にするために, 実用的なレイテンシマネージャは, アップフロント設定 (または高価な静的解析) よりもむしろ動的イントロスペクションにできるだけ依存し, メカニズム固有のオプションよりも宣言的目標による設定を優先すべきである
+        \item 採用の障壁を最小にするために, 実用的なレイテンシマネージャは, アップフロント設定 (または高価な静的分析) よりもむしろ動的イントロスペクションにできるだけ依存し, メカニズム固有のオプションよりも宣言的目標による設定を優先すべきである
     \end{itemize}
 \end{frame}
 
@@ -90,6 +90,6 @@
         \item 最後になるが, レイテンシマネージャに費やすプロセッササイクルは, 特に過負荷の期間中は, ワークロードに使われないサイクルとなることを強調する価値がある
         \item 現実的には, CFS のレイテンシ問題は, 単に追加リソースを利用可能にすることで軽減できることが多いので, レイテンシマネージャがアクティブであることが, レイテンシ目標の遵守という点で, 実際に有益であるとは言えない
         \item 言い換えれば, レイテンシマネージャは, それを実行するコストを補うに足る十分な利点をもたらさなければならないのである
-        \item したがって, 実装の効率と, 採用する解析の実行時間は非常に重要である
+        \item したがって, 実装の効率と, 採用する分析の実行時間は非常に重要である
     \end{itemize}
 \end{frame}
