--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/background_and_definitions.tex
@@ -5,7 +5,7 @@
 
 % \begin{frame}{セクションサマリ}
 %     \begin{itembox}[l]{\textbf{目的}}
-%         ROS-Llamaの基礎となる必要な背景知識と主な解析コンセプトを簡単にまとめる
+%         ROS-Llamaの基礎となる必要な背景知識と主な分析コンセプトを簡単にまとめる
 %     \end{itembox}
 % \end{frame}
 
