--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/design_of_ros_llama.tex
@@ -50,13 +50,13 @@
     \begin{block}{方法}
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
-            \item モデル抽出器は, ROSコアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を解析する
-            \item これらのライブラリは, 全ての (C++ベースの) ROSノードで使用されているため, サードパーティのROSコンポーネントに変更を加えることなく解析可能
+            \item モデル抽出器は, ROSコアライブラリ $\mathrm{rclcpp}$ および $\mathrm{rcl}$ を分析する
+            \item これらのライブラリは, 全ての (C++ベースの) ROSノードで使用されているため, サードパーティのROSコンポーネントに変更を加えることなく分析可能
         \end{itemize}
     \end{block}
 \end{frame}
 
-\begin{frame}{解析に使用するトレースポイント}
+\begin{frame}{分析に使用するトレースポイント}
     \vspace{1mm}
     \begin{block}{コールバックに関するトレースポイント}
         \setlength{\linewidth}{0.98\columnwidth}
