--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/evaluation.tex
@@ -126,13 +126,13 @@
 \begin{frame}{比較対象2}
     \begin{block}{比較対象2}
         \begin{itemize}
-            \item ROS-Llamaの原型で, 応答時間解析を用いずに, レイテンシが重要なエグゼキュータを SCHED\_RRでスケジューリングする
+            \item ROS-Llamaの原型で, 応答時間分析を用いずに, レイテンシが重要なエグゼキュータを SCHED\_RRでスケジューリングする
             \item デグレードの順序に従って優先度を割り当て, デグレードの順序が遅いエグゼキュータを, 順序が早いチェーンにのみ対応するエグゼキュータより優先させる
         \end{itemize}
     \end{block}
     % \vspace{5mm}
     % \begin{itemize}
-    %     \item このベースラインを使用して, 応答時間解析の使用によりROS-Llamaの判断がどの程度改善されるかを評価する
+    %     \item このベースラインを使用して, 応答時間分析の使用によりROS-Llamaの判断がどの程度改善されるかを評価する
     % \end{itemize}
 \end{frame}
 
@@ -266,7 +266,7 @@
 %         % \item ROS-LlamaのメモリフットプリントはROSのフットプリントと比較してごくわずかであるため, 我々はプロセッサ時間に注目した
 %         \item ROS-Llamaは6秒ごとにバジェットを再計算するように設定されており, 全体としてROS-Llamaは1CPUの30--40\% を消費する
 %         \item モデル抽出器は, システムとともに継続的に実行され, ROS-Llamaの総コストの約 $60 \%$ を占める
-%         \item 解析のためにタイミングモデルを準備するコストは, オーバヘッドの約 $15 \%$
+%         \item 分析のためにタイミングモデルを準備するコストは, オーバヘッドの約 $15 \%$
 %         \item 残りの実行時コストは, バジェット選択プロセスによるもので, バジェット編成ヒューリスティック $(\approx 5 \%)$ と応答時間分析 $(\approx 20 \%)$ に分かれている
 %     \end{itemize}
 % \end{frame}
