--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/introduction.tex
@@ -63,7 +63,7 @@
         \item まず第一に, インテグレータに必要な情報が不足している
         \item ほとんどのリアルタイム分析では, 同時実行タスクの数, それらの起動セマンティクスや機能的相互作用, メッセージの到着パターン, 最悪実行時間など, 多くの低レベルシステムの詳細に関する深い知識が前提となっている
         \item ROSコンポーネントは, この種の情報を提供するマニフェストと一緒に来ることはない
-        \item さらに悪いことに, リアルタイム解析は, 欠陥のある情報や不完全な情報にうまく対処できない
+        \item さらに悪いことに, リアルタイム分析は, 欠陥のある情報や不完全な情報にうまく対処できない
         \item モデリング目的でサードパーティコンポーネントを手作業でリバースエンジニアリングしているときに, たった一つのミスや見落としがあれば, その取り組み全体を無条件に無効にしてしまうことになりかねない
     \end{itemize}
 \end{frame}
@@ -89,7 +89,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 最後に, 仮にインテグレータが各コンポーネントについてそれぞれの専門家と議論し, タイミング解析に必要な全ての詳細を入手できたとしても, 第三の根本的な問題が残る
+        \item 最後に, 仮にインテグレータが各コンポーネントについてそれぞれの専門家と議論し, タイミング分析に必要な全ての詳細を入手できたとしても, 第三の根本的な問題が残る
         \item 多くのコンポーネントのリソース要件と性能特性は, 本質的にロボットの動的環境に依存し, したがって時間とともに変化するため, 静的 (最悪のケース) リソース配置は実行不可能なのである
     \end{itemize}
 \end{frame}
