--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/open_problems_and_pragmatic_workarounds.tex
@@ -15,7 +15,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ROS-Llamaは, そのプラットフォームである解析プラットフォームをいくつかの方向から改善することで恩恵を受けることができる
+        \item ROS-Llamaは, そのプラットフォームである分析プラットフォームをいくつかの方向から改善することで恩恵を受けることができる
     \end{itemize}
 \end{frame}
 
@@ -47,7 +47,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 第V章で述べたように, 有用な解析精度を得るためには, スカラーWCETモデルではなく, 実行時間曲線の使用が不可欠である
+        \item 第V章で述べたように, 有用な分析精度を得るためには, スカラーWCETモデルではなく, 実行時間曲線の使用が不可欠である
         \item それにもかかわらず, 我々の実験では, 観測されたレイテンシと予測された境界の間に大きなギャップがあることに気づくことがあった
     \end{itemize}
 \end{frame}
@@ -55,7 +55,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item 理由は明白で, 実行時間曲線は, 悲観的ではないものの, 依然として最悪の要求のモデルであり, 実際には, ROSシステムは一貫して最悪の動作を示すことは極めてまれである
-        \item 概念的には, 確率的タイミング解析は, 事実上常にコモディティプラットフォームに展開され, 静的WCET解析に従わないROSシステムにはるかによくマッチする可能性がある
+        \item 概念的には, 確率的タイミング分析は, 事実上常にコモディティプラットフォームに展開され, 静的WCET分析に従わないROSシステムにはるかによくマッチする可能性がある
     \end{itemize}
 \end{frame}
 
@@ -118,7 +118,7 @@
 \begin{frame}{}
     \begin{itemize}
         \item SCHED\_DEADLINEスレッドは常にSCHED-FIFOおよびSCHED\_RRスレッドより優先される
-        \item これは解析を単純化するが, 多くの実用的な問題を引き起こする
+        \item これは分析を単純化するが, 多くの実用的な問題を引き起こする
         \item 割り当てられた予約帯域幅によってこのレイテンシはいくらか制限されるが, それでもかなりのレイテンシ (すなわち, EDFの最大ビジーウィンドウ長) になる可能性がある
         \item 多くのシステムクリティカルなカーネルスレッド (ディスクドライバなど) は, SCHED-FIFOまたはSCHED\_RRの優先度でスケジュールされているので, この設計は特に残念なことである
     \end{itemize}
