--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{本論文の提案}
     \begin{itemize}
-        \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドレイテンシ解析フレームワークを提案した
+        \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドレイテンシ分析フレームワークを提案した
         \item チェーンの重要度に基づいてエンドツーエンドレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリング戦略を提案した
         \item スケジューリング戦略を実現するコールバック優先度割り当てとチェーン考慮ノード割り当てアルゴリズムを提示した
         \item NVIDIA Xavier NX プラットフォーム上で動作する ROS2 の Eloquent Elusor バージョンにスケジューラを実装した
