--- a/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/abstract.tex
+++ b/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/abstract.tex
@@ -4,15 +4,15 @@
     \begin{itemize}
         \item 自動運転車のコンピューティングシステムの応答性は, 車両の安全性と性能にとって極めて重要
         \item 例えば, 自動運転車 (AV) は, 歩行者を検知してから緊急停止するまでのエンドツーエンドレイテンシが大きすぎると, 事故を引き起こす可能性がある
-        \item しかし, AVのソフトウェアスタックは複雑で, マルチコアシステムでエンドツーエンドレイテンシを確率的に解析することは困難
+        \item しかし, AVのソフトウェアスタックは複雑で, マルチコアシステムでエンドツーエンドレイテンシを確率的に分析することは困難
         \item また, 異なる周期を持つタスクのグラフから構成され, タスク実行時間のばらつきが大きいため, 一部のコアでは最大コア利用率 $U^{\max }$ が $\mathbf{1 . 0}$ より大きくなる可能性がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{提案の概要}
     \begin{itemize}
-        \item 本論文では, 各コアで $U^{\max }$ が $1.0$ を超えることができるAVスタック上のエンドツーエンドレイテンシの新しい確率的解析を提案する
-        \item 提案する解析は, マルチコアパーティショニングスケジューリング下でスタック全体をタスクグラフのグラフとしてモデル化し, タスク実行時間が独立しているという仮定のもとで, 解析されたレイテンシ分布が実システムから観測されるものを上回るという確率的な保証を提供する
-        \item タスク間の実行時間に依存するAutowareスタックを用いて, タスク間の相関を緩和するタスクグルーピングと我々の解析を組み合わせることで, 各タスクパスのレイテンシ分布が観測値をほぼ上回る
+        \item 本論文では, 各コアで $U^{\max }$ が $1.0$ を超えることができるAVスタック上のエンドツーエンドレイテンシの新しい確率的分析を提案する
+        \item 提案する分析は, マルチコアパーティショニングスケジューリング下でスタック全体をタスクグラフのグラフとしてモデル化し, タスク実行時間が独立しているという仮定のもとで, 分析されたレイテンシ分布が実システムから観測されるものを上回るという確率的な保証を提供する
+        \item タスク間の実行時間に依存するAutowareスタックを用いて, タスク間の相関を緩和するタスクグルーピングと我々の分析を組み合わせることで, 各タスクパスのレイテンシ分布が観測値をほぼ上回る
     \end{itemize}
 \end{frame}
