--- a/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/introduction.tex
+++ b/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/introduction.tex
@@ -22,7 +22,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item しかし, 実際のAVのエンドツーエンドレイテンシの解析は, 文献上ではほとんど見当たらない
+        \item しかし, 実際のAVのエンドツーエンドレイテンシの分析は, 文献上ではほとんど見当たらない
         \item その理由の第一は, AV企業のクローズドソース戦略により, AVで動作するフルソフトウェアスタックへのアクセスが制限されていることである
         \item 近年, Autoware[1]やApollo[2]などのオープンソーススタックが登場し, 徐々にアクセスしやすくなってきている
     \end{itemize}
@@ -30,41 +30,41 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 第二の理由は, $\mathrm{AV}$ スタックは, メッセージで通信するタスクのグラフ構造であるため, 解析が複雑であることである
-        \item このような構造をセーフティクリティカルなシステムの文脈で解析しようとする研究がいくつかある
-        \item 先行研究[3]では, ユニプロセッサのEDFスケジューリングにおいて, タスクの単一DAG (Directed Acyclic Graph) を分析する確率的な解析が示されている
-        \item また, [4]では, マルチコアシステムにおける固定優先度スケジューリングのもとで, ドローンシステムにおける複数のDAGを扱う解析が提案されている
+        \item 第二の理由は, $\mathrm{AV}$ スタックは, メッセージで通信するタスクのグラフ構造であるため, 分析が複雑であることである
+        \item このような構造をセーフティクリティカルなシステムの文脈で分析しようとする研究がいくつかある
+        \item 先行研究[3]では, ユニプロセッサのEDFスケジューリングにおいて, タスクの単一DAG (Directed Acyclic Graph) を分析する確率的な分析が示されている
+        \item また, [4]では, マルチコアシステムにおける固定優先度スケジューリングのもとで, ドローンシステムにおける複数のDAGを扱う分析が提案されている
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item これらの解析は, DAGの安全な確率的応答時間を与えるが, 周期の異なるタスクグラフを扱わないため, エンドツーエンドレイテンシの確率的保証を与えることができない
-        \item また [5]では, ロボットシステムにおける最悪のエンドツーエンドレイテンシを与えるだけの決定論的解析が提案されており, 各コアが $U^{\max } \leq 1.0$ である場合に限定している
+        \item これらの分析は, DAGの安全な確率的応答時間を与えるが, 周期の異なるタスクグラフを扱わないため, エンドツーエンドレイテンシの確率的保証を与えることができない
+        \item また [5]では, ロボットシステムにおける最悪のエンドツーエンドレイテンシを与えるだけの決定論的分析が提案されており, 各コアが $U^{\max } \leq 1.0$ である場合に限定している
         \item 最近, [6]では, Apolloスタックの各タスクの確率的最悪実行時間 (pWCET) が, 極値理論を用いて分析されている
         \item この理論[7]により, キャッシュやメモリバスなどのアーキテクチャの複雑性を考慮しつつ, 実分布を上界とする安全なpWCET分布を導出できる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
-    しかし, pWCETの解析は, タスクのグラフに対するエンドツーエンドレイテンシをどのように解析するかについては扱っておらず, 基礎となるタスクモデルによりアイドルCPU時間が含まれる可能性がある
+    しかし, pWCETの分析は, タスクのグラフに対するエンドツーエンドレイテンシをどのように分析するかについては扱っておらず, 基礎となるタスクモデルによりアイドルCPU時間が含まれる可能性がある
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 本論文では, AVスタック上のエンドツーエンドレイテンシについて, 各コアの最大利用率 $U^{\max }$ が $1.0$ を超えることを許容する, 新しい確率的解析を提案する
-        \item 提案する解析は, タスクの実行時間が独立しているという仮定のもと, 実システムから観測されるレイテンシ分布が解析された分布によって上界されることを確率的に保証するもの
+        \item 本論文では, AVスタック上のエンドツーエンドレイテンシについて, 各コアの最大利用率 $U^{\max }$ が $1.0$ を超えることを許容する, 新しい確率的分析を提案する
+        \item 提案する分析は, タスクの実行時間が独立しているという仮定のもと, 実システムから観測されるレイテンシ分布が分析された分布によって上界されることを確率的に保証するもの
         \item コスト競争力のある自動車産業で必要とされる, 計算機システムの実装コスト削減に貢献する
-        \item これは, タスクの最悪のプロセッサ要求に対してコアを過剰にプロビジョニングする必要がある既存の解析[3], [5]に比べて, タスクがCPUコアをより多く利用できるようにすることで可能となる
+        \item これは, タスクの最悪のプロセッサ要求に対してコアを過剰にプロビジョニングする必要がある既存の分析[3], [5]に比べて, タスクがCPUコアをより多く利用できるようにすることで可能となる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item システムを解析可能にするために, スタック全体をタスクの不連続なサブグラフのグラフとしてモデル化し, あるサブグラフが他のサブグラフのタイミング動作に影響を与えないように, サブグラフごとに分離した環境を構築している
+        \item システムを分析可能にするために, スタック全体をタスクの不連続なサブグラフのグラフとしてモデル化し, あるサブグラフが他のサブグラフのタイミング動作に影響を与えないように, サブグラフごとに分離した環境を構築している
         \item これは, マルチコアパーティショニングスケジューリングとノンブロッキングのグラフ間通信により実現される
-        \item そして, 各サブグラフを独立に定常動作解析し, 個々のサブグラフの解析結果を組み合わせることで, あるサブグラフから他のサブグラフへのエンドツーエンドレイテンシを解析できる
-        \item タスク間の実行時間に依存するAutowareというAVスタックを用いて, タスク間の相関を緩和するタスクグルーピングと組み合わせた解析により, 各タスクパスについて観測値をほぼ上界とするレイテンシ分布が得られることを示す
+        \item そして, 各サブグラフを独立に定常動作分析し, 個々のサブグラフの分析結果を組み合わせることで, あるサブグラフから他のサブグラフへのエンドツーエンドレイテンシを分析できる
+        \item タスク間の実行時間に依存するAutowareというAVスタックを用いて, タスク間の相関を緩和するタスクグルーピングと組み合わせた分析により, 各タスクパスについて観測値をほぼ上界とするレイテンシ分布が得られることを示す
     \end{itemize}
 \end{frame}
 
@@ -72,7 +72,7 @@
     \begin{itemize}
         \item  我々の知る限り, 実際のAVスタックのセンシングから制御までのエンドツーエンドレイテンシを確率的に分析した最初の試みである
 
-        \item  提案する解析は, 実システムから観測されるレイテンシ分布が, 解析によって得られた分布によって上界されるという点で安全である
+        \item  提案する分析は, 実システムから観測されるレイテンシ分布が, 分析によって得られた分布によって上界されるという点で安全である
 
         \item  $\mathrm{AV}$ のライセンス取得に必要な, $\mathrm{AVs}$ の安全性や性能を評価するための確かな土台を提供する
 
