--- a/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
+++ b/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/main.tex
@@ -35,11 +35,12 @@
 
 % \input{prior_knowledge.tex}
 % \input{introduction.tex}
+\input{symbols_terms.tex}
 \input{preliminaries.tex}
-\input{proposed_analysis.tex}
-\input{experimental_results.tex}
-\input{related_work.tex}
-\input{conclusion.tex}
+% \input{proposed_analysis.tex}
+% \input{experimental_results.tex}
+% \input{related_work.tex}
+% \input{conclusion.tex}
 
 \lastpage
 
