--- a/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/related_work.tex
+++ b/paper/2022_IEEETC_Probabilistically_Guaranteeing_End-to-end_Latencies_in_Autonomous_Vehicle_Computing_Systems/related_work.tex
@@ -5,19 +5,19 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 数十年にわたり, 多くのエンドツーエンドレイテンシ解析が, 一般的な分散システム [17], [18], [19] またはマルチリソースシステム [20], [21], [22], [23], [24] のコンテキストで実施されてきた
+        \item 数十年にわたり, 多くのエンドツーエンドレイテンシ分析が, 一般的な分散システム [17], [18], [19] またはマルチリソースシステム [20], [21], [22], [23], [24] のコンテキストで実施されてきた
 \item 前者の文脈では, リアルタイムトランザクションは, 最大実行時間と最小リリース間時間を持つタスクのシーケンスとして定義される
 \item 次に, 各トランザクションで各タスクが経験する最大干渉は, タスクの最悪応答時間, ひいてはトランザクションの最悪エンドツーエンドレイテンシを導出するために分析される
 \item 後者では, リアルタイムタスクはサブタスクのグラフとしてモデル化され, 異なるリソースでの重複実行の影響をモデル化しながら, ソースからシンクへのエンドツーエンドレイテンシの上界が導かれる
-\item いずれの場合も, トランザクション内の各タスクまたはグラフ内の各ノードは最悪実行時間 (WCET) を持つと仮定されるため, 解析はエンドツーエンドのデッドラインを満たすための決定論的保証を与える
+\item いずれの場合も, トランザクション内の各タスクまたはグラフ内の各ノードは最悪実行時間 (WCET) を持つと仮定されるため, 分析はエンドツーエンドのデッドラインを満たすための決定論的保証を与える
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item セーフティクリティカルシステムの文脈では, タスクのグラフを解析する研究がいくつか行われている3]では, ユニプロセッサシステムにおけるEDFスケジューリングのもとで, タスクの単一DAG (Directed Acyclic Graph)を分析する確率的な解析が提示されている
-\item また, [4]では, マルチコアシステムにおける固定優先度スケジューリングのもとで, 複数のDAGを扱う解析が提案されている
-\item これらの解析は $\mathrm{DAG}(\mathrm{s})$ の安全な確率的応答時間を与えるが, 周期の異なるタスクグラフを扱わないため, エンドツーエンドレイテンシの確率的保証を与えることができない5]では, ロボットシステムにおける最悪のエンドツーエンドレイテンシを与えるだけの決定論的解析が提案されており, したがって, 全てのコアに対して $U^{\max } \leq 1.0$ がある場合に限定される
+        \item セーフティクリティカルシステムの文脈では, タスクのグラフを分析する研究がいくつか行われている3]では, ユニプロセッサシステムにおけるEDFスケジューリングのもとで, タスクの単一DAG (Directed Acyclic Graph)を分析する確率的な分析が提示されている
+\item また, [4]では, マルチコアシステムにおける固定優先度スケジューリングのもとで, 複数のDAGを扱う分析が提案されている
+\item これらの分析は $\mathrm{DAG}(\mathrm{s})$ の安全な確率的応答時間を与えるが, 周期の異なるタスクグラフを扱わないため, エンドツーエンドレイテンシの確率的保証を与えることができない5]では, ロボットシステムにおける最悪のエンドツーエンドレイテンシを与えるだけの決定論的分析が提案されており, したがって, 全てのコアに対して $U^{\max } \leq 1.0$ がある場合に限定される
     \end{itemize}
 \end{frame}
 
@@ -26,14 +26,14 @@
         \item 
 \item 最近, [6]では, Apolloスタックの各タスクの確率的最悪実行時間 (pWCET) が, 極値理論を用いて分析されている
 \item この理論[7]により, キャッシュやメモリバスなどのアーキテクチャの複雑さを考慮しつつ, 実分布を上回る安全なpWCET分布を導出できる
-\item 安全性を保証するためには, 考慮する入力データまたはタスク内部の実行経路が, 可能な限りの実行経路を表現できるほど一般的であることが必要である7]では, 代表性を実現するために, 各タスク内の基本ブロックのpWCETを推定し畳み込むEPC (Extended Path Coverage) 法が提案されている25]では, タスクグラフの解析とメモリ帯域の使用状況を監視することにより, コア間干渉を推定している
-\item しかし, pWCETの解析は, タスクグラフのエンドツーエンドレイテンシをどのように解析するかについては扱っておらず, 基礎となるタスクモデルによりアイドルCPU時間が含まれる可能性がある
+\item 安全性を保証するためには, 考慮する入力データまたはタスク内部の実行経路が, 可能な限りの実行経路を表現できるほど一般的であることが必要である7]では, 代表性を実現するために, 各タスク内の基本ブロックのpWCETを推定し畳み込むEPC (Extended Path Coverage) 法が提案されている25]では, タスクグラフの分析とメモリ帯域の使用状況を監視することにより, コア間干渉を推定している
+\item しかし, pWCETの分析は, タスクグラフのエンドツーエンドレイテンシをどのように分析するかについては扱っておらず, 基礎となるタスクモデルによりアイドルCPU時間が含まれる可能性がある
     \end{itemize}
 \end{frame}
 
 \begin{frame}{}
     \begin{itemize}
-        \item 上記の研究の中で, 我々の解析と類似している確率的スケジューラビリティ解析 (PSA) [4]について, より深く検討する価値がある
+        \item 上記の研究の中で, 我々の分析と類似している確率的スケジューラビリティ分析 (PSA) [4]について, より深く検討する価値がある
 \item PSAが想定するタスクモデルは, 独立したマルチレートタスク (我々のサブグラフに相当) の集合であり, それぞれが同じレートで全てゼロフェーズのサブタスク (我々のタスクに相当) から構成されている
 \item タスクは, タスクレベルの固定優先度でスケジューリングされ, 異なるレートのタスクのサブタスクが同じCPUコアを共有できる
 \item PSAの目的は, いわゆるクリティカルインスタントという仮定のもと, 同じタスクからのサブタスクと他のタスクからのサブタスクによって引き起こされる最大の干渉をモデル化して, 個々のサブタスクのRTDを分析することである
@@ -44,12 +44,12 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 我々の解析は, 2つの点でPSAと異なる
-\item まず, 我々の解析は, サブグラフの期間の無限列をカバーして, 全てのコアでの限界バックログ分布を求めるが, PSAはそうしない
+        \item 我々の分析は, 2つの点でPSAと異なる
+\item まず, 我々の分析は, サブグラフの期間の無限列をカバーして, 全てのコアでの限界バックログ分布を求めるが, PSAはそうしない
 \item PSAでは, 各サブタスクのRTDは, クリティカルな瞬間にバックログがないと仮定し, より優先度の高いサブタスクの無限列から最大の干渉を受けるように計算されるだけである
 \item そのため, ハイパーピリオド指標 $h \rightarrow \infty$ のときに得られる限界RTDの上界を保証するものではない
 \item 限界RTDは限界バックログ分布を反映しているので, 後者が前者を上回ることは明らかである
-\item 第二に, 我々の解析では, 期間の異なる複数のサブグラフを貫くタスクパスごとに限界LDが得られるが, PSAでは得られない
+\item 第二に, 我々の分析では, 期間の異なる複数のサブグラフを貫くタスクパスごとに限界LDが得られるが, PSAでは得られない
 \item PSAはタスク間通信を考慮していないグラフの直列化とバックログ依存グラフへの変換により, サブグラフ間の相互作用を正確に分析することが可能になった
     \end{itemize}
 \end{frame}
