--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -37,7 +37,7 @@
 
     \begin{frame}{ROS 2 エグゼキュータの分析の既存研究1}
         \begin{itemize}
-            \item Casiniは, ROS 2エグゼキュータの形式的モデリングと解析に関する最初の仕事を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の解析の基礎を築いた \cite{park2021ros2}
+            \item Casiniは, ROS 2エグゼキュータの形式的モデリングと分析に関する最初の仕事を行い, シングルスレッドエグゼキュータのスケジューリング動作をモデル化し, その後の分析の基礎を築いた \cite{park2021ros2}
             \item 応答時間分析技術を改善し, 応答時間を最適化するための優先度割り当て戦略を提案 \cite{tang2020response}
             \item 実際の実行時間のばらつきを考慮して \cite{park2021ros2} を改良し, ROS 2のスケジューリング機能をさらに探求 \cite{blass2021ros}
         \end{itemize}
