--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -254,13 +254,13 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{解析実行時間の比較 [結果]}
+\begin{frame}{分析実行時間の比較 [結果]}
     \fitimage{
         ROS2-SD と ROS2-PiCAS について, 各ワークロードセットに対するエンドツーエンドレイテンシ分析の実行時間を比較
     }{analysys_time_result}
 \end{frame}
 
-\begin{frame}{解析実行時間の比較 [結果考察]}
+\begin{frame}{分析実行時間の比較 [結果考察]}
     \begin{itemize}
         \item どちらのアプローチでも利用率が上がると分析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅い
               \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジーウィンドウであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
